service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service
  labels:
    app: echoserver
spec:
  type: NodePort
  selector:
    app: echoserver
  ports:
    - name: http
      port: 80
      targetPort: 8080
