ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-ingress
  namespace: menshow
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: menshow-group
  labels:
    app: echoserver
spec:
  rules:
  - host: "menshow.xyz"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: echoserver-service
            port:
              number: 80
